--- a/examples/labs/rccc/wlutz/tf_model/001-regularise.ipynb
+++ b/examples/labs/rccc/wlutz/tf_model/001-regularise.ipynb
@@ -241,10 +241,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "xx_about_zero, yy_about_zero = np.meshgrid(x_about_zero, y_about_zero)\n",
-    "segmentation_mask = np.zeros_like(interpolated_image)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -259,6 +256,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "xx_about_zero, yy_about_zero = np.meshgrid(x_about_zero, y_about_zero)\n",
+    "\n",
     "field_transform = pymedphys._wlutz.interppoints.translate_and_rotate_transform(field_centre, field_rotation)\n",
     "rect_dx = [-edge_lengths[0] / 2, 0, edge_lengths[0], 0, -edge_lengths[0]]\n",
     "rect_dy = [-edge_lengths[1] / 2, edge_lengths[1], 0, -edge_lengths[1], 0]\n",
@@ -267,7 +266,20 @@
     "draw_y = np.cumsum(rect_dy)\n",
     "\n",
     "rect_x, rect_y = pymedphys._wlutz.interppoints.apply_transform(draw_x, draw_y, field_transform)\n",
-    "rect_points = list(zip(rect_x, rect_y))"
+    "rect_points = list(zip(rect_x, rect_y))\n",
+    "\n",
+    "\n",
+    "rectangle = matplotlib.path.Path(rect_points)\n",
+    "\n",
+    "points = np.swapaxes(np.vstack([xx_about_zero.ravel(), yy_about_zero.ravel()]), 0, 1)\n",
+    "rectangle_mask = rectangle.contains_points(points).reshape(len(yy_about_zero), len(xx_about_zero))\n",
+    "\n",
+    "\n",
+    "within_bb = np.sqrt((xx_about_zero - bb_centre[0])**2 + (yy_about_zero - bb_centre[1])**2) <= bb_diameter/2\n",
+    "\n",
+    "segmentation_mask = np.zeros_like(interpolated_image)\n",
+    "segmentation_mask[rectangle_mask] = 1\n",
+    "segmentation_mask[within_bb] = 2"
    ]
   },
   {
@@ -275,18 +287,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "rectangle = matplotlib.path.Path(rect_points)\n",
-    "\n",
-    "points = np.swapaxes(np.vstack([xx_about_zero.ravel(), yy_about_zero.ravel()]), 0, 1)\n",
-    "rectangle_mask = rectangle.contains_points(points).reshape(len(yy_about_zero), len(xx_about_zero))\n",
-    "\n",
-    "segmentation_mask[rectangle_mask] = 1\n",
-    "\n",
-    "within_bb = np.sqrt((xx_about_zero - bb_centre[0])**2 + (yy_about_zero - bb_centre[1])**2) <= bb_diameter/2\n",
-    "\n",
-    "segmentation_mask[within_bb] = 2"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -327,7 +328,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.7.5"
   }
  },
  "nbformat": 4,
