--- a/examples/labs/rccc/wlutz/tf_model/002-regularise.ipynb
+++ b/examples/labs/rccc/wlutz/tf_model/002-regularise.ipynb
@@ -20,6 +20,7 @@
     "\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
+    "import matplotlib.path\n",
     "\n",
     "from tqdm import tqdm\n",
     "\n",
@@ -27,7 +28,8 @@
     "import pymedphys._wlutz.findfield\n",
     "import pymedphys._wlutz.iview\n",
     "import pymedphys._wlutz.imginterp\n",
-    "import pymedphys._wlutz.reporting"
+    "import pymedphys._wlutz.reporting\n",
+    "import pymedphys._wlutz.interppoints"
    ]
   },
   {
@@ -37,8 +39,23 @@
    "outputs": [],
    "source": [
     "bb_diameter = 8\n",
-    "edge_length = [20, 24]\n",
+    "edge_lengths = [20, 24]\n",
     "penumbra = 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dx = 10 / 8 / 4\n",
+    "vec_about_zero = np.arange(-20,20, dx)\n",
+    "dim = (128, 128)\n",
+    "\n",
+    "assert len(vec_about_zero) == dim[0] and len(vec_about_zero) == dim[1]\n",
+    "\n",
+    "xx_about_zero, yy_about_zero = np.meshgrid(vec_about_zero, vec_about_zero)"
    ]
   },
   {
@@ -67,7 +84,7 @@
    "outputs": [],
    "source": [
     "with open(labels_path, 'r') as labels_file:\n",
-    "    labels = json.load(labels_file)"
+    "    all_labels = json.load(labels_file)"
    ]
   },
   {
@@ -93,12 +110,49 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
-    "def load_and_regularise_data_and_labels(image_paths, all_labels, keys, dx=1/8, img_range=40):\n",
-    "    vec_about_zero = np.arange(-img_range/2, img_range/2+dx, dx)\n",
+    "def create_mask(field_centre, field_rotation, bb_centre):\n",
+    "    field_transform = pymedphys._wlutz.interppoints.translate_and_rotate_transform(field_centre, field_rotation)\n",
+    "    rect_dx = [-edge_lengths[0] / 2, 0, edge_lengths[0], 0, -edge_lengths[0]]\n",
+    "    rect_dy = [-edge_lengths[1] / 2, edge_lengths[1], 0, -edge_lengths[1], 0]\n",
+    "\n",
+    "    draw_x = np.cumsum(rect_dx)\n",
+    "    draw_y = np.cumsum(rect_dy)\n",
+    "\n",
+    "    rect_x, rect_y = pymedphys._wlutz.interppoints.apply_transform(draw_x, draw_y, field_transform)\n",
+    "    rect_points = list(zip(rect_x, rect_y))\n",
+    "\n",
+    "    rectangle = matplotlib.path.Path(rect_points)\n",
+    "\n",
+    "    points = np.swapaxes(np.vstack([xx_about_zero.ravel(), yy_about_zero.ravel()]), 0, 1)\n",
+    "    rectangle_mask = rectangle.contains_points(points).reshape(len(yy_about_zero), len(xx_about_zero))\n",
+    "\n",
+    "    within_bb = np.sqrt((xx_about_zero - bb_centre[0])**2 + (yy_about_zero - bb_centre[1])**2) <= bb_diameter/2\n",
     "    \n",
+    "    background = np.invert(rectangle_mask) & np.invert(within_bb)\n",
+    "    \n",
+    "    segmentation_mask = np.concatenate([background[:,:,None], rectangle_mask[:,:,None], within_bb[:,:,None]], axis=2)\n",
+    "    \n",
+    "    return segmentation_mask"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def load_and_regularise_data_and_labels(image_paths, all_labels, keys):    \n",
+    "    masks = []\n",
+    "    images = []\n",
     "    labels = []\n",
-    "    images = []    \n",
     "    \n",
     "    for key in tqdm(keys):\n",
     "        label = all_labels[key]['pymedphys']\n",
@@ -122,10 +176,13 @@
     "        field_rotation = label['field_rotation']\n",
     "        bb_centre = np.array(label['bb_centre']) - np.array(centre_of_mass)\n",
     "        \n",
+    "        mask = create_mask(field_centre, field_rotation, bb_centre)\n",
+    "        \n",
+    "        masks.append(mask)\n",
     "        labels.append([field_centre[0], field_centre[1], field_rotation, bb_centre[0], bb_centre[1]])\n",
-    "        images.append(interpolated_image)\n",
+    "        images.append(interpolated_image[:,:,None])\n",
     "    \n",
-    "    return np.array(images), np.array(labels)"
+    "    return np.array(images), np.array(masks), np.array(labels)"
    ]
   },
   {
@@ -134,7 +191,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "images, labels = load_and_regularise_data_and_labels(image_paths, labels, training_keys)"
+    "images, masks, labels = load_and_regularise_data_and_labels(image_paths, all_labels, training_keys)"
    ]
   },
   {
@@ -143,7 +200,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "np.shape(images)"
+    "import tensorflow as tf"
    ]
   },
   {
@@ -152,7 +209,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "np.shape(labels)"
+    "dataset = tf.data.Dataset.from_tensors((masks, images))"
    ]
   },
   {
@@ -161,7 +218,519 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def create_masks"
+    "for image, mask in dataset.take(1):\n",
+    "    sample_image, sample_mask = image, mask\n",
+    "\n",
+    "display([sample_image, sample_mask])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.shape(sample_image)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.shape(sample_mask)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "i=20\n",
+    "\n",
+    "sample_image = images[i]\n",
+    "sample_mask = masks[i]\n",
+    "# label = labels[i]\n",
+    "\n",
+    "plt.figure(figsize=(10,10))\n",
+    "\n",
+    "plt.contourf(xx_about_zero, yy_about_zero, image, 100)\n",
+    "plt.contour(xx_about_zero, yy_about_zero, mask, [0,1,2])\n",
+    "# plt.scatter(label[0], label[1])\n",
+    "# plt.scatter(label[3], label[4])\n",
+    "\n",
+    "plt.axis('equal')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pymedphys._vendor.tensorflow.pix2pix import downsample, upsample\n",
+    "import tensorflow as tf"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def display(display_list):\n",
+    "    plt.figure(figsize=(15, 15))\n",
+    "\n",
+    "    title = ['Input Image', 'True Mask', 'Predicted Mask']\n",
+    "\n",
+    "    for i in range(len(display_list)):\n",
+    "        plt.subplot(1, len(display_list), i+1)\n",
+    "        plt.title(title[i])\n",
+    "        plt.imshow(tf.keras.preprocessing.image.array_to_img(display_list[i]))\n",
+    "        plt.axis('off')\n",
+    "    plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "output_channels = 3\n",
+    "norm_type=\"batchnorm\"\n",
+    "\n",
+    "down_stack = [\n",
+    "    downsample(64, 3, norm_type, apply_norm=False),  # (bs, 128, 128, 64)\n",
+    "    downsample(128, 3, norm_type),  # (bs, 64, 64, 128)\n",
+    "    downsample(256, 3, norm_type),  # (bs, 32, 32, 256)\n",
+    "    downsample(512, 3, norm_type),  # (bs, 16, 16, 512)\n",
+    "]\n",
+    "\n",
+    "up_stack = [\n",
+    "    upsample(512, 3),  # 4x4 -> 8x8\n",
+    "    upsample(256, 3),  # 8x8 -> 16x16\n",
+    "    upsample(128, 3),  # 16x16 -> 32x32\n",
+    "    upsample(64, 3),   # 32x32 -> 64x64\n",
+    "]\n",
+    "\n",
+    "initializer = tf.random_normal_initializer(0.0, 0.02)\n",
+    "last = tf.keras.layers.Conv2DTranspose(\n",
+    "    output_channels,\n",
+    "    4,\n",
+    "    strides=2,\n",
+    "    padding=\"same\",\n",
+    "    kernel_initializer=initializer,\n",
+    "    activation=\"tanh\",\n",
+    ")  # (bs, 256, 256, 3)\n",
+    "\n",
+    "concat = tf.keras.layers.Concatenate()\n",
+    "\n",
+    "inputs = tf.keras.layers.Input(shape=[128, 128, 3])\n",
+    "x = inputs\n",
+    "\n",
+    "# Downsampling through the model\n",
+    "skips = []\n",
+    "for down in down_stack:\n",
+    "    x = down(x)\n",
+    "    skips.append(x)\n",
+    "\n",
+    "skips = reversed(skips[:-1])\n",
+    "\n",
+    "# Upsampling and establishing the skip connections\n",
+    "for up, skip in zip(up_stack, skips):\n",
+    "    x = up(x)\n",
+    "    x = concat([x, skip])\n",
+    "\n",
+    "x = last(x)\n",
+    "\n",
+    "model = tf.keras.Model(inputs=inputs, outputs=x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.summary()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.compile(optimizer='adam', loss='sparse_categorical_crossentropy',\n",
+    "              metrics=['accuracy'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tf.keras.utils.plot_model(model, show_shapes=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def create_mask(pred_mask):\n",
+    "    pred_mask = tf.argmax(pred_mask, axis=-1)\n",
+    "    pred_mask = pred_mask[..., tf.newaxis]\n",
+    "    return pred_mask[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def show_predictions(dataset=None, num=1):\n",
+    "    if dataset:\n",
+    "        for image, mask in dataset.take(num):\n",
+    "            pred_mask = model.predict(image)\n",
+    "            display([image[0], mask[0], create_mask(pred_mask)])\n",
+    "    else:\n",
+    "        display([sample_image, sample_mask,\n",
+    "                 create_mask(model.predict(sample_image[tf.newaxis, ...]))])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "show_predictions()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# base_model = tf.keras.applications.MobileNetV2(input_shape=(96, 96, 3), include_top=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "base_model = tf.keras.applications.MobileNetV2(input_shape=(96, 96, 3), include_top=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# tf.keras.utils.plot_model(base_model, show_shapes=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Use the activations of these layers\n",
+    "layer_names = [\n",
+    "    'block_1_expand_relu',  \n",
+    "    'block_3_expand_relu',   \n",
+    "    'block_6_expand_relu',  \n",
+    "    'block_13_expand_relu', \n",
+    "    'block_16_project',    \n",
+    "]\n",
+    "layers = [base_model.get_layer(name).output for name in layer_names]\n",
+    "\n",
+    "# Create the feature extraction model\n",
+    "down_stack = tf.keras.Model(inputs=base_model.input, outputs=layers)\n",
+    "\n",
+    "down_stack.trainable = True"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "down_stack.summary()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "up_stack = [\n",
+    "    pix2pix.upsample(512, 3),  # 4x4 -> 8x8\n",
+    "    pix2pix.upsample(256, 3),  # 8x8 -> 16x16\n",
+    "    pix2pix.upsample(128, 3),  # 16x16 -> 32x32\n",
+    "    pix2pix.upsample(64, 3),   # 32x32 -> 64x64\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def unet_model(output_channels):\n",
+    "\n",
+    "    # This is the last layer of the model\n",
+    "    last = tf.keras.layers.Conv2DTranspose(\n",
+    "        output_channels, 3, strides=2,\n",
+    "        padding='same', activation='softmax')\n",
+    "\n",
+    "    inputs = tf.keras.layers.Input(shape=[96, 96, 3])\n",
+    "    x = inputs\n",
+    "\n",
+    "    # Downsampling through the model\n",
+    "    skips = down_stack(x)\n",
+    "    x = skips[-1]\n",
+    "    skips = reversed(skips[:-1])\n",
+    "\n",
+    "    # Upsampling and establishing the skip connections\n",
+    "    for up, skip in zip(up_stack, skips):\n",
+    "        x = up(x)\n",
+    "        concat = tf.keras.layers.Concatenate()\n",
+    "        x = concat([x, skip])\n",
+    "\n",
+    "    x = last(x)\n",
+    "\n",
+    "    return tf.keras.Model(inputs=inputs, outputs=x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "OUTPUT_CHANNELS = 3\n",
+    "model = unet_model(OUTPUT_CHANNELS)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "inputs = tf.keras.layers.Input(shape=[96, 96, 3])\n",
+    "x = inputs\n",
+    "\n",
+    "inputs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "skips = down_stack(x)\n",
+    "skips"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "skips = down_stack(x)\n",
+    "skips"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.array([4,8,16,32,64]) * 8"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "x = skips[-1]\n",
+    "skips = reversed(skips[:-1])\n",
+    "\n",
+    "skips"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pix2pix"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "layer_names = [layer.name for layer in base_model.layers]\n",
+    "layer_names"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "layer.name"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "down_stack = [\n",
+    "    pix2pix.downsample(64, 3),  # 8x8 -> 16x16\n",
+    "    pix2pix.downsample(128, 3),  # 4x4 -> 8x8\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "up_stack = [\n",
+    "    pix2pix.upsample(128, 3),  # 4x4 -> 8x8\n",
+    "    pix2pix.upsample(64, 3),  # 8x8 -> 16x16\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def unet_model(output_channels):\n",
+    "\n",
+    "    # This is the last layer of the model\n",
+    "    last = tf.keras.layers.Conv2DTranspose(\n",
+    "        output_channels, 3, strides=2,\n",
+    "        padding='same', activation='softmax')  #16x16 -> 32x32\n",
+    "\n",
+    "    inputs = tf.keras.layers.Input(shape=[32, 32, 3])\n",
+    "    x = inputs\n",
+    "\n",
+    "    # Downsampling through the model\n",
+    "    skips = down_stack(x)\n",
+    "    x = skips[-1]\n",
+    "    skips = reversed(skips[:-1])\n",
+    "    \n",
+    "    for down, skip in zip(down_stack, skips):\n",
+    "        x = up(x)\n",
+    "        concat = tf.keras.layers.Concatenate()\n",
+    "        x = concat([x, skip])\n",
+    "\n",
+    "    # Upsampling and establishing the skip connections\n",
+    "    for up, skip in zip(up_stack, skips):\n",
+    "        x = up(x)\n",
+    "        concat = tf.keras.layers.Concatenate()\n",
+    "        x = concat([x, skip])\n",
+    "\n",
+    "    x = last(x)\n",
+    "\n",
+    "    return tf.keras.Model(inputs=inputs, outputs=x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "OUTPUT_CHANNELS = 3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = unet_model(OUTPUT_CHANNELS)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "32 * 4"
    ]
   }
  ],
@@ -181,7 +750,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.7.5"
   }
  },
  "nbformat": 4,
