implement opening a file on windows without causing it to lock out other applications -- for opening iView DB files

--- a/examples/labs/rccc/read_iViewDB/005-database-handling.ipynb
+++ b/examples/labs/rccc/read_iViewDB/005-database-handling.ipynb
@@ -6,7 +6,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pymedphys"
+    "%load_ext autoreload\n",
+    "%autoreload 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pymedphys\n",
+    "import pymedphys._utilities.filesystem"
    ]
   },
   {
@@ -24,7 +35,42 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "database_filepaths"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with pymedphys._utilities.filesystem.open_no_lock(filepath, \"r\") as a_file:\n",
+    "    data = a_file.read()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# database_filepaths"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "open?"
    ]
   }
  ],
