--- a/examples/labs/rccc/wlutz/tf_model/segmentation.ipynb
+++ b/examples/labs/rccc/wlutz/tf_model/segmentation.ipynb
@@ -123,6 +123,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tf.config.list_physical_devices()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "colab": {},
     "colab_type": "code",
