working on points in polygon within tensorflow
Former-commit-id: b77fdc854af09047608a3901fa15ed9528832f39 [formerly fb281319e3b58e500a68d2033aa1701f4333096c]
Former-commit-id: d56446e68e1948ea5e6d40743bb2bfa975244b0a

--- a/examples/labs/rccc/wlutz/tf_model/005-just-encoder-arm-pix2pix.ipynb
+++ b/examples/labs/rccc/wlutz/tf_model/005-just-encoder-arm-pix2pix.ipynb
@@ -184,10 +184,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "x = tf.range(0,128)\n",
-    "y = x"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -254,15 +251,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tf.math.sin(field_rotation_radians)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "# field_rotation_radians = field_rotation / 180 * np.pi\n",
     "# sin = tf.math.sin(field_rotation_radians)\n",
     "# cos = tf.math.cos(field_rotation_radians)\n",
@@ -275,16 +263,14 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "def get_transformation_matrix(field_centre, field_rotation):\n",
-    "    field_rotation_radians = field_rotation / 180 * np.pi\n",
-    "    sin = tf.math.sin(field_rotation_radians)\n",
-    "    cos = tf.math.cos(field_rotation_radians)\n",
-    "    x = field_centre[0]\n",
-    "    y = field_centre[1]\n",
-    "\n",
-    "    return tf.constant([(cos, -sin, x), (sin, cos, y), (0, 0, 1)])"
-   ]
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -292,37 +278,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def create_mask(field_centre, field_rotation, bb_centre):\n",
-    "    field_transform = get_transformation_matrix(field_centre, field_rotation)\n",
-    "    rect_dx = [-edge_lengths[0] / 2, 0, edge_lengths[0], 0, -edge_lengths[0]]\n",
-    "    rect_dy = [-edge_lengths[1] / 2, edge_lengths[1], 0, -edge_lengths[1], 0]\n",
     "\n",
-    "    draw_x = np.cumsum(rect_dx)\n",
-    "    draw_y = np.cumsum(rect_dy)\n",
-    "\n",
-    "    rect_x, rect_y = pymedphys._wlutz.interppoints.apply_transform(draw_x, draw_y, field_transform)\n",
-    "    rect_points = list(zip(rect_x, rect_y))\n",
-    "\n",
-    "    rectangle = matplotlib.path.Path(rect_points)\n",
-    "\n",
-    "    points = np.swapaxes(np.vstack([xx_about_zero.ravel(), yy_about_zero.ravel()]), 0, 1)\n",
-    "    rectangle_mask = rectangle.contains_points(points).reshape(len(yy_about_zero), len(xx_about_zero))\n",
-    "\n",
-    "    within_bb = np.sqrt((xx_about_zero - bb_centre[0])**2 + (yy_about_zero - bb_centre[1])**2) <= bb_diameter/2\n",
-    "    \n",
-    "    background = np.invert(rectangle_mask) & np.invert(within_bb)\n",
-    "    \n",
-    "    segmentation_mask = np.concatenate([background[:,:,None], rectangle_mask[:,:,None], within_bb[:,:,None]], axis=2)\n",
-    "    \n",
-    "    return segmentation_mask"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "@tf.function\n",
     "def decode(tensor):\n",
     "    field_centre = [tensor[0], tensor[1]]\n",
     "    field_rotation = tensor[2]\n",
@@ -354,16 +311,6 @@
     "    mask = decode(encoding)\n",
     "    \n",
     "    return image, mask"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# train_labels = {key: labels[key] for key in train_keys}\n",
-    "# train_labels"
    ]
   },
   {
@@ -405,8 +352,137 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "rect_dx = [-edge_lengths[0] / 2, 0, edge_lengths[0], 0, -edge_lengths[0]]\n",
+    "rect_dy = [-edge_lengths[1] / 2, edge_lengths[1], 0, -edge_lengths[1], 0]\n",
+    "\n",
+    "draw_x = np.cumsum(rect_dx)\n",
+    "draw_y = np.cumsum(rect_dy)\n",
+    "\n",
+    "coord = tf.range(0,128)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# https://stackoverflow.com/a/31530106\n",
+    "def extract_blocks(a, blocksize, keep_as_view=False):\n",
+    "    M,N = a.shape\n",
+    "    b0, b1 = blocksize\n",
+    "    if keep_as_view==0:\n",
+    "        return a.reshape(M//b0,b0,N//b1,b1).swapaxes(1,2).reshape(-1,b0,b1)\n",
+    "    else:\n",
+    "        return a.reshape(M//b0,b0,N//b1,b1).swapaxes(1,2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = np.arange(0,21)\n",
+    "y = np.arange(0,21)\n",
+    "\n",
+    "xx, yy = np.meshgrid(x, y)\n",
+    "\n",
+    "dx = 1/16\n",
+    "x_expand = np.arange(-0.5 + dx/2, 20.5, dx)\n",
+    "y_expand = np.arange(-0.5 + dx/2, 20.5, dx)\n",
+    "\n",
+    "xx_expand, yy_expand = np.meshgrid(x_expand, y_expand)\n",
+    "\n",
+    "centre = [5.55, 10]\n",
+    "radius = 4\n",
+    "\n",
+    "expanded_mask = (xx_expand - centre[0])**2 + (yy_expand - centre[1])**2 <= radius**2\n",
+    "circle_mask = np.mean(np.mean(extract_blocks(expanded_mask, [16,16]), axis=2), axis=1).reshape((21,21))\n",
+    "\n",
+    "plt.pcolormesh(x - .5, y - .5, circle_mask)\n",
+    "plt.axis('equal')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x_expand[0:16]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "21 * 16"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_transformation_matrix(field_centre, field_rotation):\n",
+    "    field_rotation_radians = field_rotation / 180 * np.pi\n",
+    "    sin = tf.math.sin(field_rotation_radians)\n",
+    "    cos = tf.math.cos(field_rotation_radians)\n",
+    "    x = field_centre[0]\n",
+    "    y = field_centre[1]\n",
+    "    \n",
+    "    print(tf.shape(x))\n",
+    "\n",
+    "    return tf.convert_to_tensor([[cos, -sin, x], [sin, cos, y], [0, 0, 1]])\n",
+    "\n",
+    "\n",
+    "def apply_transform(xx, yy, transform):\n",
+    "    xx_flat = np.ravel(xx)\n",
+    "    transformed = transform @ np.vstack([xx_flat, np.ravel(yy), np.ones_like(xx_flat)])\n",
+    "\n",
+    "    xx_transformed = transformed[0]\n",
+    "    yy_transformed = transformed[1]\n",
+    "    \n",
+    "    xx_transformed = tf.reshape(xx_transformed, xx.shape)\n",
+    "    yy_transformed = tf.reshape(yy_transformed, yy.shape)\n",
+    "\n",
+    "    return xx_transformed, yy_transformed\n",
+    "\n",
+    "\n",
+    "@tf.function\n",
+    "def create_mask(field_centre, field_rotation, bb_centre):\n",
+    "    field_transform = get_transformation_matrix(field_centre, field_rotation)\n",
+    "\n",
+    "    rect_x, rect_y = apply_transform(draw_x, draw_y, field_transform)\n",
+    "    rect_points = tf.stack([rect_x, rect_y])\n",
+    "\n",
+    "    rectangle = matplotlib.path.Path(rect_points)\n",
+    "\n",
+    "    points = np.swapaxes(np.vstack([xx_about_zero.ravel(), yy_about_zero.ravel()]), 0, 1)\n",
+    "    rectangle_mask = rectangle.contains_points(points).reshape(len(yy_about_zero), len(xx_about_zero))\n",
+    "\n",
+    "    within_bb = np.sqrt((xx_about_zero - bb_centre[0])**2 + (yy_about_zero - bb_centre[1])**2) <= bb_diameter/2\n",
+    "    \n",
+    "    background = np.invert(rectangle_mask) & np.invert(within_bb)\n",
+    "    \n",
+    "    segmentation_mask = np.concatenate([background[:,:,None], rectangle_mask[:,:,None], within_bb[:,:,None]], axis=2)\n",
+    "    \n",
+    "    return segmentation_mask\n",
+    "\n",
+    "\n",
     "train_dataset = get_dataset(train_keys, image_paths, labels)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
